+ Fixed a problem with cities remaining visible after you clicked on them and then tried to hide them. + Added some padding to the "No characters found" text, so that it doesn't stick to the sides on mobile

--- a/src/style/_card.scss
+++ b/src/style/_card.scss
@@ -8,6 +8,9 @@
     align-self: flex-start;
     align-items: stretch;
     padding: 10px 0;
+    & > .card__section {
+        padding: 0px 15px;
+    }
 }
 
 .card {
